nu kan man gå in i en kö

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
 
     <!-- #region Import app -->
     <script src="./views/queues.view.js"></script>
+    <script src="./views/queue.view.js"></script>
     <script src="./views/admin/dashboard.view.js"></script>
     <script src="./app.js"></script>
     <!-- #endregion -->
