färger på radio buttons

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/theme/default.css">
     <!-- #endregion -->
 
-    <!--<link rel="stylesheet/css" type="text/css" href="style.css">-->
+    <link rel="stylesheet/css" type="text/css" href="style.css">
     <title>Projekt</title>
 </head>
 
