la till en ikon

--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,10 @@
     <script src = "/socket.io/socket.io.js"></script>
 
     <!-- #region Import app -->
-    <script src="./views/queues.view.js"></script>
-    <script src="./views/queue.view.js"></script>
-    <script src="./views/admin/dashboard.view.js"></script>
-    <script src="./app.js"></script>
+    <script src="/views/queues.view.js"></script>
+    <script src="/views/queue.view.js"></script>
+    <script src="/views/admin/dashboard.view.js"></script>
+    <script src="/app.js"></script>
     <!-- #endregion -->
 </body>
 
