--- a/public/index.html
+++ b/public/index.html
@@ -5,57 +5,47 @@
 		<meta charset="utf-8" />
 		<meta content="width=device-width,initial-scale=1,minimal-ui" name="viewport" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-		<!-- #region CDN Dependencies -->
-		<!-- CDN Dependencies requires a functioning internet connection to use -->
-		<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css">-->
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		
 		<script src="https://unpkg.com/vue"></script>
 		<script src="https://unpkg.com/vue-material"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons" />
-		<link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/vue-material.min.css" />
-		<link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/theme/default.css" />
-		<!-- #endregion -->
-		
+		<link rel="stylesheet" href="https://unpkg.com/vue-material/dist/vue-material.min.css" />
+		<link rel="stylesheet" href="https://unpkg.com/vue-material/dist/theme/default.css" />
 		<title>Enqueue</title>
+		<style type="text/css">
+			#app > .md-layout {
+				align-items: center;
+				justify-content: center;
+				margin: 0 auto;
+				padding: 30px 0;
+				max-width: 1200px;
+			}
+		</style>
 	</head>
-
+	
 	<body>
 		<div id="app">
-		    <nav class="navbar navbar-default navbar-inverse navbar-static-top" role="navigation">
-		        <div class="container">
-		            <!-- Brand and toggle get grouped for better mobile display -->
-		            <div class="navbar-header">
-		                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-brand-centered">
-		                    <span class="sr-only">Toggle navigation</span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                </button>
-		                <div v-on:click="redirect('/')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;">Köer</div>
-		                <div v-on:click="redirect('/admin')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-if="profile !== null && profile.teacher">Administration</div>
-		                <div v-on:click="redirect_login()" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-if="profile == null">Logga in</div>
-		                <div v-on:click="set_location('/logout')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-else>Logga ut</div>
-		            </div>
-		        </div><!-- /.container-fluid -->
-		    </nav>
-		    
-		    <router-view></router-view>
+			<div class="md-layout md-gutter md-alignment-center">
+				<div class="md-layout-item md-medium-size-100 md-small-size-100 md-xsmall-size-100">
+					<router-view></router-view>
+				</div>
+			</div>
+			
+			<ul>
+				<li v-on:click="redirect('/')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;">Köer</li>
+				<li v-on:click="redirect('/admin')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-if="profile !== null && profile.teacher">Administration</li>
+				<li v-on:click="redirect_login()" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-if="profile == null">Logga in</li>
+				<li v-on:click="set_location('/logout')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-else>Logga ut</li>
+			</ul>
 		</div>
-
-		<!-- This fetches the socket.io connection object from the server. -->
-		<script src = "/socket.io/socket.io.js"></script>
-
-		<!-- #region Import app -->
+		
+		<script src="/socket.io/socket.io.js"></script>
 		<script src="/views/queues.view.js"></script>
 		<script src="/views/queue.view.js"></script>   
 		<script src="/views/edit.view.js"></script>
 		<script src="/views/admin/dashboard.view.js"></script>
 		<script src="/app.js"></script>
-		<!-- #endregion -->
 	</body>
 </html>
