--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" class="md-scrollbar">
 	<head>
 		<meta charset="utf-8" />
 		<meta content="width=device-width,initial-scale=1,minimal-ui" name="viewport" />
