--- a/public/index.html
+++ b/public/index.html
@@ -27,18 +27,21 @@
 	
 	<body>
 		<div id="app">
-			<div class="md-layout md-gutter md-alignment-center">
-				<div class="md-layout-item md-medium-size-100 md-small-size-100 md-xsmall-size-100">
+			<md-app>
+				<md-app-toolbar class="md-primary">
+					<md-button v-on:click="redirect('/')"><md-icon>list</md-icon> Alla köer</md-button>
+					<md-button v-on:click="redirect('/admin')" v-if="profile !== null && profile.teacher"><md-icon>build</md-icon> Administration</md-button>
+					
+					<div class="md-toolbar-section-end">
+						<md-button v-on:click="redirect_login()" v-if="profile === null"><md-icon>face</md-icon> Logga in</md-button>
+						<md-button v-on:click="set_location('/logout')" v-if="profile !== null"><md-icon>exit_to_app</md-icon> Logga ut</md-button>
+					</div>
+				</md-app-toolbar>
+				
+				<md-app-content>
 					<router-view></router-view>
-				</div>
-			</div>
-			
-			<ul>
-				<li v-on:click="redirect('/')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;">Köer</li>
-				<li v-on:click="redirect('/admin')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-if="profile !== null && profile.teacher">Administration</li>
-				<li v-on:click="redirect_login()" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-if="profile == null">Logga in</li>
-				<li v-on:click="set_location('/logout')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;" v-else>Logga ut</li>
-			</ul>
+				</md-app-content>
+			</md-app>
 			
 			<md-snackbar md-position="center" :md-active="!socket_connected" md-persistent>
 				<span>Enqueue är inte ansluten till nätverket. Försöker återansluta...</span>
