--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,14 @@
 				padding: 15px 0;
 				max-width: 1200px;
 			}
+			
+			.studentIsHandled {
+				background: #e3f2fd;
+			}
+			
+			.badLocation {
+				color: #ff1744;
+			}
 		</style>
 	</head>
 	
