grunderna till integration med bokningssystem

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,12 @@
 				background: #e3f2fd;
 			}
 			
-			.badLocation {
+			.badLocation, .noLocation {
 				color: #ff1744;
+			}
+
+			.noLocation {
+				font-style: italic;
 			}
 			
 			.myQueueRow {
