--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,27 @@
 			.myQueueRow {
 				font-weight: bold;
 			}
+
+			.history_old, .history_new {
+				white-space: pre-line;
+			}
+
+			.history_old {
+				color: red;
+    		text-decoration: line-through;
+			}
+
+			.history_new {
+				color: green;
+			}
+			
+			.history_old + .history_new {
+				margin-top: 10px;
+			}
+
+			table tr td {
+				vertical-align: top;
+			}
 		</style>
 	</head>
 	
@@ -66,7 +87,8 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/views/queues.view.js"></script>
 	<script src="/views/queue.view.js"></script>   
-	<script src="/views/edit.view.js"></script>
+	<script src="/views/edit.view.js"></script>   
+	<script src="/views/history.view.js"></script>
 	<script src="/views/admin/dashboard.view.js"></script>
 	<script src="/app.js"></script>
 </html>
